Fix overflow.

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -442,6 +442,8 @@ body {
    background: url('../img/menu-tile.png') repeat-x bottom center;
    border-top: 6px solid #fff;
    margin-top: 30px;
+   overflow: hidden;
+   position: relative;
 
    .widgets{
       border-bottom: 6px solid #fff;
